added WebApplication folder

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 .idea/*
 uteg/estructuraDatos1/.idea/
 web/.idea/*
+/uteg/programacion3/WebApplication/nbproject/private/
+/uteg/programacion3/WebApplication/build/
