--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@ uteg/estructuraDatos1/.idea/
 web/.idea/*
 /uteg/programacion3/WebApplication/nbproject/private/
 /uteg/programacion3/WebApplication/build/
+/uteg/dataBase/nbproject/private/
+/uteg/tables/nbproject/private/
+/uteg/tables/build/
